<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/estadio"
    android:padding="16dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/football_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="16dp" />

    <!-- Campo de Nombre -->
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_hint"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Campo de Apellido -->
    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_hint"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Campo de Correo Electrónico -->
    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Campo de Teléfono -->
    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono_hint"
        android:inputType="phone"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Campo de Posición -->
    <EditText
        android:id="@+id/etPosicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/posicion_hint"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Botón Registrar -->
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_button_text"
        android:backgroundTint="@color/secondaryColor"
        android:textColor="@android:color/white"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp" />
</LinearLayout>

