<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/estadio"
    android:padding="16dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/football_logo"
        android:contentDescription="@string/app_name" />

    <!-- Campo de Usuario -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Texto para recuperar contraseña -->
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="8dp"
        android:textSize="14sp" />

    <!-- Botón para iniciar sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@android:color/white" />

    <!-- Botón para registrarse -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/secondaryColor"
        android:textColor="@android:color/white" />
</LinearLayout>
